<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:context=".ShopActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_one" />

        <Button
            android:id="@+id/button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_two" />

        <Button
            android:id="@+id/button_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_three" />

        <Button
            android:id="@+id/button_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_four" />

        <Button
            android:id="@+id/button_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_five" />

        <Button
            android:id="@+id/button_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_six" />

        <Button
            android:id="@+id/button_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_seven" />

        <Button
            android:id="@+id/button_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_eight" />

        <Button
            android:id="@+id/button_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_nine" />

        <Button
            android:id="@+id/button_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_ten" />
    </LinearLayout>
</ScrollView>